--- a/app/build.gradle
+++ b/app/build.gradle
@@ -24,4 +24,6 @@ dependencies {
     testCompile 'junit:junit:4.12'
     compile 'com.android.support:appcompat-v7:23.4.0'
     compile 'com.jakewharton:butterknife:7.0.1'
+    compile files('libs/org.apache.http.legacy.jar')
+    compile 'com.google.code.gson:gson:2.6.2'
 }
