--- a/app/build.gradle
+++ b/app/build.gradle
@@ -26,4 +26,5 @@ dependencies {
     compile 'com.jakewharton:butterknife:7.0.1'
     compile files('libs/org.apache.http.legacy.jar')
     compile 'com.google.code.gson:gson:2.6.2'
+    compile 'com.jiechic.library:xUtils:2.6.14'
 }
