--- a/app/build.gradle
+++ b/app/build.gradle
@@ -4,6 +4,9 @@ android {
     compileSdkVersion 23
     buildToolsVersion "23.0.3"
 
+    aaptOptions.cruncherEnabled = false
+    aaptOptions.useNewCruncher = false
+    
     defaultConfig {
         applicationId "com.im_dsd.googlepaly"
         minSdkVersion 15
