HomeFragment的轮播条基本完成，增加了全局捕获异常的类，很有用

--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -3,6 +3,8 @@
     package="com.im_dsd.googlepaly" >
 
     <uses-permission android:name="android.permission.INTERNET"/>
+    <uses-permission android:name="android.permission.WRITE_EXTERNAL_STORAGE"/>
+
     <application
         android:name=".global.GooglePlayApplication"
         android:allowBackup="true"
