--- a/app/build.gradle
+++ b/app/build.gradle
@@ -21,10 +21,11 @@ android {
 
 dependencies {
     compile fileTree(include: ['*.jar'], dir: 'libs')
-    testCompile 'junit:junit:4.12'
+    compile files('libs/org.apache.http.legacy.jar')
     compile 'com.android.support:appcompat-v7:23.4.0'
     compile 'com.jakewharton:butterknife:7.0.1'
-    compile files('libs/org.apache.http.legacy.jar')
     compile 'com.google.code.gson:gson:2.6.2'
     compile 'com.jiechic.library:xUtils:2.6.14'
+    compile 'com.android.support.constraint:constraint-layout:1.0.0-alpha1'
+    testCompile 'junit:junit:4.12'
 }
